Upgrade to Spring Boot 3.5